[package]
name = "cpi-token-transfer"
version = "0.1.0"
description = "CPI Token Transfer Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_token_transfer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

# Force older versions to avoid edition2024 requirement
blake3 = "=1.5.5"
